# hapi-project-api

./: .gitignore  README.md  pyproject.toml  server.py
migrations/models/: 0_20250423223947_init.py  1_20250423224209_create_user_table.py
src/: __init__.py
src/application/: decoders.py  lifespan.py  response.py
src/domains/account/: models.py  routes.py
src/domains/account/endpoints/: create.py  delete.py  get_all.py  get_one.py  update.py
src/domains/account/handlers/: create.py  delete.py  get_all.py  get_one.py  update.py
src/domains/account_type/: models.py  routes.py
src/domains/account_type/endpoints/: create.py  delete.py  get_all.py  get_one.py  update.py
src/domains/account_type/handlers/: create.py  delete.py  get_all.py  get_one.py  update.py
src/domains/user/: models.py  routes.py
src/domains/user/endpoints/: create.py  delete.py  get_all.py  get_one.py  update.py
src/domains/user/handlers/: create.py  delete.py  get_all.py  get_one.py  update.py
src/infrastructure/: db.py  mixins.py
src/infrastructure/models/: __init__.py  account.py  user.py
tests/http/: account_types.http  accounts.http  users.http
