[project]
name = "hapi-project-api"
version = "0.1.0"
description = "an api application"
authors = [
    {name = "Lowell Rueca", email = "lowellrueca@gmail.com"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
